feat: added search and pagination in articles
